viewの追加・調整

--- a/views/index.haml
+++ b/views/index.haml
@@ -9,7 +9,7 @@
     %a(href="/twitter/auth")
       Twitter認証して利用する！（解析に結構時間がかかります）
     %h2 これは何？
-    あなたのタイムラインを3000件ほど解析し、コミケっぽいtweetを抽出して表示します。
+    あなたのタイムラインを解析し、コミケっぽいtweetを抽出して表示します。
     %br
     サークルチェックなどにお役立てください。
     %br
