API利用形式の変更、ユーザーアイコンの表示
API利用形式の変更によって、API切れが起こりにくくなった。
これはtwitter gemのgithubにあるexampleをほぼコピペした。

--- a/views/index.haml
+++ b/views/index.haml
@@ -18,10 +18,10 @@
     %br
     このツールはあなたのTLを解析するだけで、自動でtweetしたりはしません。ご安心ください。
     %h2 抽出キーワード
-    コミケ、夏コミ、C88、新刊、入稿、おしながき、お品書き、委託、予約、pixiv、etc...
+    コミケ、冬コミ、C89、新刊、入稿、おしながき、お品書き、表紙、委託、予約、pixiv、etc...
     %h2 作った人
     %a(href="https://twitter.com/vivit_jc")
       @vivit_jc
     %br
     %a(href="http://www.amazon.co.jp/registry/wishlist/3T036T82AOCXG")
-      感謝の気持ちを伝える、追加機能のリクエストなどはこちらから
+      賄賂を送ってvivit_jcを影で操ろう！
