C90用に検索単語や文言を変更

--- a/views/index.haml
+++ b/views/index.haml
@@ -18,7 +18,7 @@
     %br
     このツールはあなたのTLを解析するだけで、自動でtweetしたりはしません。ご安心ください。
     %h2 抽出キーワード
-    コミケ、冬コミ、C89、新刊、入稿、おしながき、お品書き、表紙、委託、予約、pixiv、etc...
+    コミケ、夏コミ、C90、新刊、入稿、おしながき、お品書き、表紙、委託、予約、pixiv、etc...
     %h2 作った人
     %a(href="https://twitter.com/vivit_jc")
       @vivit_jc
