文言とアイコン取得apiの変更

--- a/views/scan.haml
+++ b/views/scan.haml
@@ -13,7 +13,7 @@
               - user = p.user
             - userurl = user.url
             %a(href=userurl target="_")
-              %img{src: "http://twiticon.herokuapp.com/"+user.screen_name}
+              %img{src: "http://furyu.nazo.cc/twicon/"+user.screen_name}
               %br
               =user.name
           %span.screen_name
